--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://qvbi836afm8csj53yd2h:pscale_pw_xve2KItSbGAN0wVDGulota9oFNvUexvHAIds7F6rogE@gcp.connect.psdb.cloud/cas?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://qnnzdi47qzsd89y0r47a:pscale_pw_ILLLmyFDjUcSJYWSt3wnqn1xTTqszJ1joE9XrpqDx3s@gcp.connect.psdb.cloud/cas?ssl={"rejectUnauthorized":true}'
