--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL='mysql://qnnzdi47qzsd89y0r47a:pscale_pw_ILLLmyFDjUcSJYWSt3wnqn1xTTqszJ1joE9XrpqDx3s@gcp.connect.psdb.cloud/cas?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://58ud4oe6ajecjlerm8bp:pscale_pw_oQXntFspMC5lqx3JjMnyy4PFtKtfrCdAppmXnCh7Zq@gcp.connect.psdb.cloud/cas?ssl={"rejectUnauthorized":true}'
+  
